Cleaned up code in dirdeployer